--- a/mainpage.css
+++ b/mainpage.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: sans-serif;
 }
 body {
     color: white;     
@@ -86,7 +87,7 @@ input {
 .inicio {
     width: 100%;
     height: 100vh;
-    background: url(./Copia\ de\ \ -5\ 2.jpg) no-repeat;
+    background: url(./fotos/fondo1jpg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
@@ -215,7 +216,7 @@ input {
 .inicio {
     width: 100%;
     height: 100vh;
-    background: url(./Copia\ de\ \ -5.jpg) no-repeat;
+    background: url(./fotos/fondo1jpg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
